@@ -12,7 +12,6 @@ import java.nio.file.Path;
 import java.time.Instant;
 import java.time.ZonedDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import org.mockito.ArgumentMatchers;
 import org.mockito.MockedStatic;
@@ -38,6 +37,7 @@ import de.tum.in.www1.artemis.programmingexercise.MockDelegate;
 import de.tum.in.www1.artemis.repository.*;
 import de.tum.in.www1.artemis.service.CourseExamExportService;
 import de.tum.in.www1.artemis.service.FileService;
+import de.tum.in.www1.artemis.service.ParticipationService;
 import de.tum.in.www1.artemis.service.ZipFileService;
 import de.tum.in.www1.artemis.service.dto.StudentDTO;
 import de.tum.in.www1.artemis.service.notifications.GroupNotificationService;
@@ -116,6 +116,9 @@ public class CourseTestService {
     @Autowired
     private GroupNotificationService groupNotificationService;
 
+    @Autowired
+    private ParticipationService participationService;
+
     private final static int numberOfStudents = 8;
 
     private final static int numberOfTutors = 5;
@@ -182,45 +185,49 @@ public class CourseTestService {
     }
 
     // Test
-    public void testCreateCourseWithNegativeMaxComplainNumber() throws Exception {
-        Course course = ModelFactory.generateCourse(null, null, null, new HashSet<>());
-
+    private void testCreateCourseWithNegativeValue(Course course) throws Exception {
         mockDelegate.mockCreateGroupInUserManagement(course.getDefaultStudentGroupName());
         mockDelegate.mockCreateGroupInUserManagement(course.getDefaultTeachingAssistantGroupName());
         mockDelegate.mockCreateGroupInUserManagement(course.getDefaultEditorGroupName());
         mockDelegate.mockCreateGroupInUserManagement(course.getDefaultInstructorGroupName());
-        course.setMaxComplaints(-1);
         request.post("/api/courses", course, HttpStatus.BAD_REQUEST);
         List<Course> repoContent = courseRepo.findAll();
         assertThat(repoContent).as("Course has not been stored").isEmpty();
+    }
+
+    // Test
+    public void testCreateCourseWithNegativeMaxComplainNumber() throws Exception {
+        Course course = ModelFactory.generateCourse(null, null, null, new HashSet<>());
+        course.setMaxComplaints(-1);
+        testCreateCourseWithNegativeValue(course);
     }
 
     // Test
     public void testCreateCourseWithNegativeMaxComplainTimeDays() throws Exception {
         Course course = ModelFactory.generateCourse(null, null, null, new HashSet<>());
-
-        mockDelegate.mockCreateGroupInUserManagement(course.getDefaultStudentGroupName());
-        mockDelegate.mockCreateGroupInUserManagement(course.getDefaultTeachingAssistantGroupName());
-        mockDelegate.mockCreateGroupInUserManagement(course.getDefaultEditorGroupName());
-        mockDelegate.mockCreateGroupInUserManagement(course.getDefaultInstructorGroupName());
         course.setMaxComplaintTimeDays(-1);
-        request.post("/api/courses", course, HttpStatus.BAD_REQUEST);
-        List<Course> repoContent = courseRepo.findAll();
-        assertThat(repoContent).as("Course has not been stored").isEmpty();
+        testCreateCourseWithNegativeValue(course);
     }
 
     // Test
     public void testCreateCourseWithNegativeMaxTeamComplainNumber() throws Exception {
         Course course = ModelFactory.generateCourse(null, null, null, new HashSet<>());
-
-        mockDelegate.mockCreateGroupInUserManagement(course.getDefaultStudentGroupName());
-        mockDelegate.mockCreateGroupInUserManagement(course.getDefaultTeachingAssistantGroupName());
-        mockDelegate.mockCreateGroupInUserManagement(course.getDefaultEditorGroupName());
-        mockDelegate.mockCreateGroupInUserManagement(course.getDefaultInstructorGroupName());
         course.setMaxTeamComplaints(-1);
-        request.post("/api/courses", course, HttpStatus.BAD_REQUEST);
-        List<Course> repoContent = courseRepo.findAll();
-        assertThat(repoContent).as("Course has not been stored").isEmpty();
+        testCreateCourseWithNegativeValue(course);
+    }
+
+    // Test
+    public void testCreateCourseWithNegativeMaxComplaintTextLimit() throws Exception {
+        Course course = ModelFactory.generateCourse(null, null, null, new HashSet<>());
+        course.setMaxComplaintTextLimit(-1);
+        testCreateCourseWithNegativeValue(course);
+    }
+
+    // Test
+    public void testCreateCourseWithNegativeMaxComplaintResponseTextLimit() throws Exception {
+        Course course = ModelFactory.generateCourse(null, null, null, new HashSet<>());
+        course.setMaxComplaintResponseTextLimit(-1);
+        testCreateCourseWithNegativeValue(course);
     }
 
     // Test
@@ -269,7 +276,7 @@ public class CourseTestService {
     // Test
     public void testCreateCourseWithOptions() throws Exception {
         // Generate POST Request Body with maxComplaints = 5, maxComplaintTimeDays = 14, postsEnabled = false
-        Course course = ModelFactory.generateCourse(null, null, null, new HashSet<>(), null, null, null, null, 5, 5, 14, false, 0);
+        Course course = ModelFactory.generateCourse(null, null, null, new HashSet<>(), null, null, null, null, 5, 5, 14, 2000, 2000, false, 0);
 
         mockDelegate.mockCreateGroupInUserManagement(course.getDefaultStudentGroupName());
         mockDelegate.mockCreateGroupInUserManagement(course.getDefaultTeachingAssistantGroupName());
@@ -527,7 +534,7 @@ public class CourseTestService {
 
     // Test
     public void testGetCourseForDashboard() throws Exception {
-        List<Course> courses = database.createCoursesWithExercisesAndLecturesAndLectureUnits(true);
+        List<Course> courses = database.createCoursesWithExercisesAndLecturesAndLectureUnits(true, false);
         Course receivedCourse = request.get("/api/courses/" + courses.get(0).getId() + "/for-dashboard", HttpStatus.OK, Course.class);
 
         // Test that the received course has five exercises
@@ -563,7 +570,7 @@ public class CourseTestService {
 
     // Test
     public void testGetAllCoursesForDashboard() throws Exception {
-        database.createCoursesWithExercisesAndLecturesAndLectureUnits(true);
+        database.createCoursesWithExercisesAndLecturesAndLectureUnits(true, false);
 
         // Perform the request that is being tested here
         List<Course> courses = request.getList("/api/courses/for-dashboard", HttpStatus.OK, Course.class);
@@ -1315,8 +1322,9 @@ public class CourseTestService {
         zipFileTestUtilService.extractZipFileRecursively(archivePath.toString());
         String extractedArchiveDir = archivePath.toString().substring(0, archivePath.toString().length() - 4);
 
-        return Files.walk(Path.of(extractedArchiveDir)).filter(Files::isRegularFile).map(Path::getFileName).filter(path -> !path.toString().endsWith(".zip"))
-                .collect(Collectors.toList());
+        try (var files = Files.walk(Path.of(extractedArchiveDir))) {
+            return files.filter(Files::isRegularFile).map(Path::getFileName).filter(path -> !path.toString().endsWith(".zip")).toList();
+        }
     }
 
     public void testExportCourse_cannotCreateTmpDir() throws Exception {
@@ -1416,7 +1424,10 @@ public class CourseTestService {
 
         // We test for the filenames of the submissions since it's the easiest way.
         // We don't test the directory structure
-        var filenames = Files.walk(Path.of(extractedArchiveDir)).filter(Files::isRegularFile).map(Path::getFileName).collect(Collectors.toList());
+        List<Path> filenames;
+        try (var files = Files.walk(Path.of(extractedArchiveDir))) {
+            filenames = files.filter(Files::isRegularFile).map(Path::getFileName).toList();
+        }
 
         var submissions = submissionRepository.findAll();
 
@@ -1451,7 +1462,7 @@ public class CourseTestService {
     // Test
     public void testCleanupCourseAsInstructor() throws Exception {
         // Generate a course that has an archive
-        var course = database.addCourseWithOneProgrammingExercise(false, ProgrammingLanguage.JAVA);
+        var course = database.addCourseWithOneProgrammingExercise(false, false, ProgrammingLanguage.JAVA);
         course.setCourseArchivePath("some-archive-path");
         courseRepo.save(course);
 
@@ -1567,9 +1578,11 @@ public class CourseTestService {
         instructor.setGroups(groups);
         userRepo.save(instructor);
 
-        // Get a student
+        // Get two students
         var student = ModelFactory.generateActivatedUser("user1");
         userRepo.save(student);
+        var student2 = ModelFactory.generateActivatedUser("user2");
+        userRepo.save(student2);
 
         // Add a team exercise which was just released but not due
         var releaseDate = ZonedDateTime.now().minusDays(4);
@@ -1583,8 +1596,7 @@ public class CourseTestService {
         var teamStudents = new HashSet<User>();
         teamStudents.add(student);
         var team = database.createTeam(teamStudents, instructor, teamExerciseNotEnded, "team");
-        database.addTeamParticipationForExercise(teamExerciseNotEnded, team.getId());
-
+        database.createSubmissionForTextExercise(teamExerciseNotEnded, team, "Team Text");
         instructorsCourse.addExercises(teamExerciseNotEnded);
 
         // Create an exercise which has passed the due and assessment due date
@@ -1605,11 +1617,17 @@ public class CourseTestService {
         exerciseInAssessment.setMaxPoints(15.0);
         exerciseInAssessment = exerciseRepo.save(exerciseInAssessment);
 
-        // Add a single participation to that exercise
+        // Add a participation and submission to that exercise
         final var exerciseIdInAssessment = exerciseInAssessment.getId();
         var resultToSetAssessorFor = database.createParticipationSubmissionAndResult(exerciseIdInAssessment, student, 15.0, 0.0, 30, true);
+        resultToSetAssessorFor.getSubmission().setSubmissionDate(dueDate.minusHours(1));
+        resultToSetAssessorFor.getSubmission().setSubmitted(true);
         resultToSetAssessorFor.setAssessor(instructor);
         resultRepo.saveAndFlush(resultToSetAssessorFor);
+        submissionRepository.saveAndFlush(resultToSetAssessorFor.getSubmission());
+
+        // Add a participation without submission to that exercise (just starting)
+        participationService.startExercise(exerciseInAssessment, student2, false);
 
         instructorsCourse.addExercises(exerciseInAssessment);
 
